# CompilersLab

./: .gitignore  CMakeLists.txt  DFA.cpp  DFA.h  NFA.cpp  NFA.h  algorithm.cpp  algorithm.h  automat.cpp  automat.h  main.cpp  preprocessing.cpp  report.docx  test_file.cpp
docs/: report.docx
src/algorithms/: algorithm.cpp  algorithm.h
src/automat/DFA/: DFA.cpp  DFA.h
src/automat/NFA/: NFA.cpp  NFA.h
src/automat/base_automat/: automat.cpp  automat.h  syntaxTree.cpp  syntaxTree.h
src/cmd/: main.cpp
src/prep/: preprocessing.cpp  preprocessing.h
src/tests/: NFA_tests.cpp
src/visualization/: tree_visualization.cpp  tree_visualization.h  visualizer.cpp  visualizer.h
